--- a/Project.toml
+++ b/Project.toml
@@ -13,9 +13,9 @@ TestSetExtensions = "98d24dd4-01ad-11ea-1b02-c9a08f80db04"
 Unicode = "4ec0a83e-493e-50e2-b9ac-8f72acf5a8f5"
 
 [compat]
-DocStringExtensions = "0.9"
-Documenter = "0.27"
-Orthography = "0.21"
-PolytonicGreek = "0.19"
+DocStringExtensions = "0.9.3"
+Documenter = "1"
+Orthography = "0.22"
+PolytonicGreek = "0.21"
 TestSetExtensions = "2"
-julia = "1.9"
+julia = "1.10, 1.11"
