--- a/Project.toml
+++ b/Project.toml
@@ -8,18 +8,22 @@ CitableBase = "d6f014bd-995c-41bd-9893-703339864534"
 CitableCorpus = "cf5ac11a-93ef-4a1a-97a3-f6af101603b5"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 Orthography = "0b4c9448-09b0-4e78-95ea-3eb3328be36d"
 PolytonicGreek = "72b824a7-2b4a-40fa-944c-ac4f345dc63a"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 TestSetExtensions = "98d24dd4-01ad-11ea-1b02-c9a08f80db04"
 Unicode = "4ec0a83e-493e-50e2-b9ac-8f72acf5a8f5"
 
 [compat]
-CitableBase = "10.4.0"
-CitableCorpus = "0.13.5"
-DocStringExtensions = "0.9.3"
+CitableBase = "10"
+CitableCorpus = "0.13"
+DocStringExtensions = "0.9"
 Documenter = "1"
+OrderedCollections = "1"
 Orthography = "0.22"
 PolytonicGreek = "0.21"
+StatsBase = "0.34"
 TestSetExtensions = "2"
 julia = "1.10, 1.11"
